--- a/funGame.csproj
+++ b/funGame.csproj
@@ -49,9 +49,18 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CharacterFSM\BaseState.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="CharacterFSM\ClimbingState.cs" />
+    <Compile Include="CharacterFSM\CrouchingState.cs" />
+    <Compile Include="CharacterFSM\CrouchWalkingState.cs" />
+    <Compile Include="CharacterFSM\FallingState.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CharacterFSM\RunningState.cs" />
+    <Compile Include="CharacterFSM\StandingState.cs" />
+    <Compile Include="CharacterFSM\WalkingState.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
