--- a/funGame.csproj
+++ b/funGame.csproj
@@ -62,6 +62,7 @@
     <Compile Include="CharacterState\Movement\FallingState.cs" />
     <Compile Include="CharacterState\Movement\AbstractMovementState.cs" />
     <Compile Include="Floor.cs" />
+    <Compile Include="HUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CharacterState\Movement\RunningState.cs" />
     <Compile Include="CharacterState\Movement\StandingState.cs" />
